Attempt without retransmission Toff

--- a/SF12.ipynb
+++ b/SF12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "# Parameters for ToA calculation\n",
     "BW = 125000    # Bandwidth in Hz\n",
     "SF = 12        # Spreading Factor\n",
-    "preamble = 8   # length of preamble in bytes \n",
+    "preamble = 8   # length of preamble in bytes\n",
     "payload = 25   # payload in bytes\n",
     "header = 0     # Header: if enabled --> 0 |  if disabled --> 1\n",
     "CRC = 1        # if enabled --> 1 | if disabled --> 0 | We enable this only during the uplink slot for error detection \n",
@@ -35,15 +35,20 @@
     "max_timeout_for_ack = 3000\n",
     "                                                 # Maximum time waiting for acknowledgment to be received\n",
     "#Node_related parameters\n",
-    "lambd = 1/200000\n",
-    "node_step = int(25600000*10)\n",
-    "duty_cycle = 0.01\n",
+    "lambd = 1/400000\n",
+    "node_step = int(36000000 * 3)\n",
+    "duty_cycle = 0.01   \n",
     "\n",
     "#Lists to store nodes in different states\n",
     "node_list = []\n",
     "nodes_to_retransmit = []\n",
     "nodes_transmitting = []\n",
     "waiting_for_ack = []                                                    # Simulation duration in msecs\n",
+    "\n",
+    "#LISTS FOR TESTING\n",
+    "SUCCESSFUL_TRANSMISSIONS = []\n",
+    "COLLISIONS = []\n",
+    "NUM_TO_TRANSMIT = []\n",
     "\n",
     "\n",
     "#Lists to store metrics for the plots\n",
@@ -94,7 +99,7 @@
     "ax5.legend()\n",
     "\n",
     "#simulation loop that represents duration of 1 msec\n",
-    "while(sim.num_to_transmit * ToA/node_step <= 2):\n",
+    "while(sim.num_to_transmit * ToA/node_step <= 2.25):\n",
     "    if(sim.node_num < 1000):                        #Maximum node number allowed is 1000\n",
     "        if(time % node_step == 1):              #After every node_step interval add one node to the node_array \n",
     "            sim.node_num += 1\n",
@@ -119,6 +124,10 @@
     "        #Every node_step interval, update the metrics for the plots\n",
     "        sim.update_metrics_per_node_step(node_step, gateway, ToA, G, S, node_list, nodes_to_retransmit, nodes_transmitting, waiting_for_ack, collision_rate, len_node_list, len_nodes_transmitting, len_waiting_for_ack, len_nodes_to_retransmit, nodes_selected, ack_duration)\n",
     "        \n",
+    "        SUCCESSFUL_TRANSMISSIONS.append(sim.successful_transmissions)\n",
+    "        COLLISIONS.append(sim.collisions)\n",
+    "        NUM_TO_TRANSMIT.append(sim.num_to_transmit)\n",
+    "\n",
     "        # Clear output and redraw the plots\n",
     "        clear_output(wait=True)\n",
     "\n",
