maybe final version

--- a/SF12.ipynb
+++ b/SF12.ipynb
@@ -22,22 +22,22 @@
     "BW = 125000    # Bandwidth in Hz\n",
     "SF = 12        # Spreading Factor\n",
     "preamble = 8   # length of preamble in bytes\n",
-    "payload = 25   # payload in bytes\n",
+    "payload = 12   # payload in bytes\n",
     "header = 0     # Header: if enabled --> 0 |  if disabled --> 1\n",
     "CRC = 1        # if enabled --> 1 | if disabled --> 0 | We enable this only during the uplink slot for error detection \n",
-    "DE = 1         # when LowDataRateOptimize = 1 -->1 | otherwise --> 0\n",
+    "DE = 0         # when LowDataRateOptimize = 1 -->1 | otherwise --> 0\n",
     "CR = 4         # Coding Rate: 4/5 --> 1 | 4/6 --> 2 | 4/7 --> 3 | 4/8 --> 4\n",
     "\n",
     "#Time related parameters\n",
     "time = 0\n",
     "RX_delay1 = 1000\n",
-    "min_timeout_for_ack = 1000\n",
-    "max_timeout_for_ack = 3000\n",
+    "max_timeout_for_ack = 1000\n",
     "                                                 # Maximum time waiting for acknowledgment to be received\n",
     "#Node_related parameters\n",
-    "lambd = 1/400000\n",
-    "node_step = int(36000000 * 3)\n",
+    "lambd = 1/300000\n",
+    "node_step = int(36000000/20)   \n",
     "duty_cycle = 0.01   \n",
+    "max_back_off = 100000\n",
     "\n",
     "#Lists to store nodes in different states\n",
     "node_list = []\n",
@@ -78,7 +78,7 @@
     "ax2.set(xlabel='Number of Nodes', ylabel='S', title='Plot of S')\n",
     "ax3.set(xlabel='G', ylabel='Collision Rate', title='Plot of Collision Rate')\n",
     "ax4.set(xlabel='G', ylabel='S', title='Plot of S')\n",
-    "ax5.set(xlabel='Number of Nodes', ylabel='Number of Nodes', title='Number of nodes in each array')\n",
+    "ax5.set(xlabel='Number of Nodes', ylabel='Nodes existing', title='Number of nodes in each state')\n",
     "ax6.set(xlabel='Nodes existing', ylabel='Nodes selected', title='Nodes selected to transmit')\n",
     "\n",
     "# Initialize line objects\n",
@@ -99,7 +99,7 @@
     "ax5.legend()\n",
     "\n",
     "#simulation loop that represents duration of 1 msec\n",
-    "while(sim.num_to_transmit * ToA/node_step <= 2.25):\n",
+    "while(sim.num_to_transmit * ToA/node_step <= 2):\n",
     "    if(sim.node_num < 1000):                        #Maximum node number allowed is 1000\n",
     "        if(time % node_step == 1):              #After every node_step interval add one node to the node_array \n",
     "            sim.node_num += 1\n",
@@ -112,10 +112,10 @@
     "    check_collisions(gateway, nodes_transmitting)\n",
     "    \n",
     "    #check if any transmissions have just finished and if so, set the appropriate nodes to waiting_for_ack state\n",
-    "    check_uplink_finished(time, nodes_transmitting, RX_delay1, min_timeout_for_ack, max_timeout_for_ack, waiting_for_ack)\n",
+    "    check_uplink_finished(time, nodes_transmitting, RX_delay1, max_timeout_for_ack, waiting_for_ack)\n",
     "    \n",
     "    #Calculate the successful transmission number and the collision number within this msec\n",
-    "    Tx_results = check_transmission_success(time, node_list, nodes_to_retransmit, waiting_for_ack, gateway, ToA, ack_duration)\n",
+    "    Tx_results = check_transmission_success(time, node_list, nodes_to_retransmit, waiting_for_ack, gateway, ToA, ack_duration, max_back_off)\n",
     "    \n",
     "    #Update the metrics from the results of this msec\n",
     "    sim.update_metrics_per_cycle(Tx_results, gateway)\n",
@@ -162,7 +162,7 @@
     "        sim.reset_metrics(gateway)\n",
     "    \n",
     "    #At the end of every msec, check if the nodes comply with the duty cycle policies and update the time lived for each node\n",
-    "    update_Toff(node_list, nodes_to_retransmit)\n",
+    "    update_Toff(time, node_list, nodes_to_retransmit)\n",
     "    time += 1\n",
     "plt.ioff()\n",
     "\n",
