--- a/SF6.ipynb
+++ b/SF6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
     "#Time related parameters\n",
     "time = 0\n",
     "RX_delay1 = 1000\n",
-    "min_timeout_for_ack = 1000\n",
-    "max_timeout_for_ack = 3000\n",
+    "max_timeout_for_ack = 1000\n",
     "\n",
     "#Node_related parameters\n",
     "lambd = 1/5000\n",
     "node_step = int(1024000/2)\n",
     "duty_cycle = 0.01\n",
+    "max_backoff = 10000\n",
     "\n",
     "#Lists to store nodes in different states\n",
     "node_list = []\n",
@@ -106,10 +106,10 @@
     "    check_collisions(gateway, nodes_transmitting)\n",
     "    \n",
     "    #check if any transmissions have just finished and if so, set the appropriate nodes to waiting_for_ack state\n",
-    "    check_uplink_finished(time, nodes_transmitting, RX_delay1, min_timeout_for_ack, max_timeout_for_ack, waiting_for_ack)\n",
+    "    check_uplink_finished(time, nodes_transmitting, RX_delay1, max_timeout_for_ack, waiting_for_ack)\n",
     "    \n",
     "    #Calculate the successful transmission number and the collision number within this msec\n",
-    "    Tx_results = check_transmission_success(time, node_list, nodes_to_retransmit, waiting_for_ack, gateway, ToA, ack_duration)\n",
+    "    Tx_results = check_transmission_success(time, node_list, nodes_to_retransmit, waiting_for_ack, gateway, ToA, ack_duration, max_backoff)\n",
     "    \n",
     "    #Update the metrics from the results of this msec\n",
     "    sim.update_metrics_per_cycle(Tx_results, gateway)\n",
@@ -150,7 +150,7 @@
     "        sim.reset_metrics(gateway)\n",
     "    \n",
     "    #At the end of every msec, check if the nodes comply with the duty cycle policies and update the time lived for each node\n",
-    "    update_Toff(node_list, nodes_to_retransmit)\n",
+    "    update_Toff(time, node_list, nodes_to_retransmit)\n",
     "    time += 1\n",
     "plt.ioff()\n",
     "\n",
